--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <p>Phone no:056530556</p>
   <p>becauseiam33@gmail.com</p>
   <hr size="2" noshade>
-  <form class="" action="mailto:wikinerd@live.com" method="post" enctype="text/plain">
+  <form class="" action="mailto:becauseiam33@gmail.com" method="post" enctype="text/plain">
     <label for="">Your name:</label>
     <input type="text" name="yourName" value=""><br><br>
     <label for="">Email:</label>
